refactor : timesale 전체 조회 리턴 타입 hotel summary response으로 수정